--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,6 +5,7 @@ build:
     build:
       - pip3 install -r requirements.txt
 run: 
+  runtime-version: 3.11
   command: python3 api.py
   network:
     port:8000
