--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,7 +5,7 @@ build:
     build:
       - pip3 install -r requirements.txt
 run: 
-  runtime-version: 3.11
   command: python3 api.py
   network:
-    - port:8000
+    port: 8000
+    env: MY_APP_PORT
