--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -5,5 +5,6 @@ build:
     build:
       - pip3 install -r requirements.txt
 run:
-  pre-run: pip3 install -r requirements.txt
+  pre-run: 
+    - pip3 install -r requirements.txt
   command: python api.py
