* using GPT-40 * using postgresql with full dump * refined prompt to format final values to Brazilian locale

--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ pexpect==4.9.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==6.0.0
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pydantic==2.7.4
