--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 annotated-types==0.7.0
+anthropic==0.29.0
 anyio==4.4.0
 appnope==0.1.4
 asttokens==2.4.1
@@ -14,6 +15,7 @@ comm==0.2.2
 dataclasses-json==0.6.7
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.2
@@ -21,23 +23,28 @@ executing==2.0.1
 faiss-cpu==1.8.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
+filelock==3.15.4
 Flask==3.0.3
 frozenlist==1.4.1
+fsspec==2024.6.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+huggingface-hub==0.23.4
 idna==3.7
 ipykernel==6.29.4
 ipython==8.25.0
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 langchain==0.2.5
+langchain-anthropic==0.1.15
 langchain-community==0.2.5
 langchain-core==0.2.9
 langchain-experimental==0.0.61
@@ -85,6 +92,7 @@ stack-data==0.6.3
 starlette==0.37.2
 tenacity==8.4.1
 tiktoken==0.7.0
+tokenizers==0.19.1
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
