--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
+amqp==5.2.0
 annotated-types==0.7.0
 anthropic==0.29.0
 anyio==4.4.0
 appnope==0.1.4
+asgiref==3.8.1
 asttokens==2.4.1
+asyncio==3.4.3
 attrs==23.2.0
+billiard==4.2.0
 blinker==1.8.2
 cachetools==5.3.3
+celery==5.4.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 comm==0.2.2
 dataclasses-json==0.6.7
 debugpy==1.8.1
@@ -40,10 +48,12 @@ itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 jiter==0.5.0
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+kombu==5.3.7
 langchain==0.2.5
 langchain-anthropic==0.1.15
 langchain-community==0.2.5
@@ -61,6 +71,7 @@ mdurl==0.1.2
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+nltk==3.8.1
 numpy==1.26.4
 openai==1.34.0
 orjson==3.10.5
@@ -102,10 +113,12 @@ twilio==9.2.0
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.1
 ujson==5.10.0
 urllib3==2.2.2
 uvicorn==0.30.1
 uvloop==0.19.0
+vine==5.1.0
 watchfiles==0.22.0
 wcwidth==0.2.13
 websockets==12.0
