updating config file

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -8,7 +8,7 @@ run:
   runtime-version: 3.11
   pre-run: 
     - pip3 install -r requirements.txt
-  command: python3 api.py
+  command: python3 api2.py
   env:
     - name: OPENAI_API_KEY
       value: "sk-proj-34gmnYXvYqXUnBx6Rv8AT3BlbkFJkXXqBgAnkVAO1I7tmxjY"
