--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,9 +43,34 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        echo "$PRIVATE_KEY" > private_key
+        chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key ubuntu@${{ env.EC2_HOST }} "
+          # Check if AWS CLI is installed
+          if ! command -v aws &> /dev/null; then
+            echo 'AWS CLI is not installed. Installing...'
+            curl 'https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip' -o 'awscliv2.zip'
+            unzip awscliv2.zip
+            sudo ./aws/install
+          fi
+
+          # Check if instance has IAM role
+          if curl -s http://169.254.169.254/latest/meta-data/iam/security-credentials/ -o /dev/null; then
+            echo 'Instance has IAM role, using instance profile'
+          else
+            echo 'Instance does not have IAM role, configuring AWS CLI'
+            aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws configure set region ${{ secrets.AWS_REGION }}
+          fi
+          
           set -e
+
+          # Add current user to docker group
+          sudo usermod -aG docker $USER
+          
+          # Reload the user's group assignments
+          newgrp docker
 
           echo 'Logging in to Amazon ECR...'
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin $ECR_REGISTRY &&
