--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,11 @@
 name: CI Pipeline
 
 on:
-  push:
-    branches: [ "main" ]
+    push:
+        branches: [ "main" ]
+env:
+    ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+    ECR_REPOSITORY: syny
 
 jobs:
   build:
