--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+boto==2.49.0
+boto3==1.34.145
+botocore==1.34.145
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
@@ -20,6 +23,7 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+jmespath==1.0.1
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -45,6 +49,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
@@ -52,7 +57,9 @@ redis==5.0.7
 regex==2024.5.15
 requests==2.32.3
 rich==13.7.1
+s3transfer==0.10.2
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
