--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,8 +30,9 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        AWS-ACCESS-KEY-ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS-SECRET-ACCESS-KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       run: |
           set -e
           echo 'Pulling the Docker image...'
@@ -44,4 +45,9 @@ jobs:
           docker rm fastapi-container || true &&
           
           echo 'Starting the new container...'
-          docker run -d -p 8080:8080 -e AWS_ACCESS_KEY_ID=$AWS-ACCESS-KEY-ID AWS_SECRET_ACCESS_KEY=$AWS-SECRET-ACCESS-KEY --name fastapi-container $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker run -d -p 8080:8080 \
+            -e OPENAI_API_KEY=$OPENAI_API_KEY \
+            -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+            -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+            -e AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION \
+            --name fastapi-container $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
