--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -29,7 +29,6 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       run: |
           set -e
@@ -52,8 +51,7 @@ jobs:
 
           echo 'Starting the new container...'
           docker run -d -p 8080:8080 \
-            -e OPENAI_API_KEY=$OPENAI_API_KEY \
-            -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
-            -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+            -e AWS_ACCESS_KEY_ID=$ACCESS_KEY_ID \
+            -e AWS_SECRET_ACCESS_KEY=$SECRET_ACCESS_KEY \
             -e AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION \
             --name fastapi-container $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
