--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,10 +48,12 @@ jobs:
           # Extract AccessKeyId and SecretAccessKey using jq
           ACCESS_KEY_ID=$(echo $CREDENTIALS_JSON | jq -r '.AccessKeyId')
           SECRET_ACCESS_KEY=$(echo $CREDENTIALS_JSON | jq -r '.SecretAccessKey')
+          SESSION_TOKEN=$(echo $CREDENTIALS_JSON | jq -r '.Token') # Extract the session token
 
           echo 'Starting the new container...'
           docker run -d -p 8080:8080 \
             -e AWS_ACCESS_KEY_ID=$ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY=$SECRET_ACCESS_KEY \
             -e AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION \
+            -e AWS_SESSION_TOKEN=$SESSION_TOKEN \
             --name fastapi-container $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
